<resources>
    <string name="app_name">Exam</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="full_name">Enter Full Name</string>
    <string name="email_address">Enter Email Address</string>
    <string name="mobile_number">Enter Mobile Number</string>
    <string name="birthday">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="form">Form</string>
    <string name="propelrr">Propelrr</string>
    <string name="age">Age</string>
    <string name="submit">Submit</string>
    <string name="clear">Clear</string>
</resources>